--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -119,6 +119,31 @@ spring:
   mvc.throw-exception-if-no-handler-found: true
   web.resources.add-mappings: false
 
+---
+spring:
+  config:
+    activate:
+      on-profile: test
+  datasource:
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=TRUE
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+  liquibase:
+    changeLog: "classpath:db/changelog-test.sql"
+  sql:
+    init:
+      mode: always
+      data-locations: classpath:data4dev/data-test.sql
+---
+
 logging:
   level:
     root: WARN
