--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,9 +26,10 @@ spring:
         # https://stackoverflow.com/questions/21257819/what-is-the-difference-between-hibernate-jdbc-fetch-size-and-hibernate-jdbc-batc
         jdbc.batch_size: 20
   datasource:
-    url: jdbc:postgresql://localhost:5432/jira
-    username: jira
-    password: JiraRush
+    url: ${DATASOURCE_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: ${DB_DRIVER}
 
   liquibase:
     changeLog: "classpath:db/changelog.sql"
@@ -114,6 +115,10 @@ spring:
     username: jira4jr@gmail.com
     password: zdfzsrqvgimldzyj
     port: 587
+#    host: ${MAIL_HOST}
+#    username: ${MAIL_USERNAME}
+#    password: ${MAIL_PASSWORD}
+#    port: ${MAIL_PORT}
   thymeleaf.check-template-location: false
 
   mvc.throw-exception-if-no-handler-found: true
